@@ -1,4 +1,4 @@
-/**
+/*
  * The MIT License
  * Copyright © 2014-2019 Ilkka Seppälä
  *
@@ -20,11 +20,8 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-package com.iluwatar.specification.app;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
+package com.iluwatar.specification.app;
 
 import com.iluwatar.specification.creature.Creature;
 import com.iluwatar.specification.creature.Dragon;
@@ -37,34 +34,33 @@ import com.iluwatar.specification.property.Color;
 import com.iluwatar.specification.property.Movement;
 import com.iluwatar.specification.selector.ColorSelector;
 import com.iluwatar.specification.selector.MovementSelector;
+import java.util.List;
+import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * 
- * The central idea of the Specification pattern is to separate the statement of how to match a
+ * <p>The central idea of the Specification pattern is to separate the statement of how to match a
  * candidate, from the candidate object that it is matched against. As well as its usefulness in
- * selection, it is also valuable for validation and for building to order.
- * <p>
- * In this example we have a pool of creatures with different properties. We then have defined
- * separate selection rules (Specifications) that we apply to the collection and as output receive
- * only the creatures that match the selection criteria.
- * <p>
- * http://martinfowler.com/apsupp/spec.pdf
+ * selection, it is also valuable for validation and for building to order.</p>
  *
+ * <p>In this example we have a pool of creatures with different properties. We then have defined
+ * separate selection rules (Specifications) that we apply to the collection and as output receive
+ * only the creatures that match the selection criteria.</p>
+ *
+ * <p>http://martinfowler.com/apsupp/spec.pdf</p>
  */
 public class App {
   
   private static final Logger LOGGER = LoggerFactory.getLogger(App.class);
 
   /**
-   * Program entry point
+   * Program entry point.
    */
   public static void main(String[] args) {
     // initialize creatures list
-    List<Creature> creatures =
-        Arrays.asList(new Goblin(), new Octopus(), new Dragon(), new Shark(), new Troll(),
-            new KillerBee());
+    List<Creature> creatures = List.of(new Goblin(), new Octopus(), new Dragon(), new Shark(),
+        new Troll(), new KillerBee());
     // find all walking creatures
     LOGGER.info("Find all walking creatures");
     List<Creature> walkingCreatures =
